<resources>
    <string name="app_name">GeoShape</string>
    <string name="server_mode">Server Mode</string>
    <string name="client_mode">Client Mode</string>
    <string name="msg_ip_address">Server IP Address: %s</string>
    <string name="msg_waiting_for_players">Waiting for players…</string>
    <string name="create_team">Create Team</string>
    <string name="ask_server_ip">Server IP Address: </string>
    <string name="button_connect">Connect</string>
    <string name="error_address">Address not recognized</string>
    <string name="btn_emulator">Connect to emulator</string>
    <string name="button_cancel">Cancel</string>
    <string name="loading_start_game">Waiting for host to \nstart the game</string>
    <string name="title_activity_loading_client_map">Map</string>
    <string name="send_sms">Send SMS</string>
    <string name="distancia_isec_deis">Distance ISEC-DEIS:</string>
    <string name="distancia_deis_teatro">Distance DEIS-Teatro:</string>
    <string name="distancia_teatro_deis">Distance Teatro-DEIS:</string>
    <string name="waiting_player_1_to_nstart_the_game">Waiting player 1 to \nstart the game...</string>
    <string name="show_map">Show Map</string>
    <string name="top_polygons">Top Polygons</string>
</resources>