<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="70sp"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/serverModeBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/server_mode"
            android:padding="16dp"/>

        <Button
            android:id="@+id/clientModeBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/client_mode"
            android:padding="16dp"/>

    </LinearLayout>

</LinearLayout>