<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/serverIpTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/msg_ip_address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/msg_waiting_for_players" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp">

            <ListView
                android:id="@+id/clientsListView"
                android:layout_width="300dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/sendSMSBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/send_sms"
                android:onClick="sendMessage"
                android:padding="16dp" />

            <Button
                android:id="@+id/createTeamBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/create_team"
                android:padding="16dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>